$Id$

1.11 --/--/----

Now uses java.version to identify VM and thus XPath usage
Errors when inserting before/after root nodes
Fixed source packaging wrt. XMLCatalog.class
Fixed possible infinite loop in insert statement
Added 'destbuffer' to permit in-buffer XML manipulation
Added <print> capability

1.10.7 24/05/2005

Fix for empty filesets

1.10.6 29/04/2005

Added a fix for properties being reset inbetween <call>s. See test/scripts/build-93.xml

1.10.5 29/10/2004

Added xmltask.path and xmltask.fqpath properties to the property set when
calling stuff via <call>

1.10.4 29/10/2004

Reduced default log output

1.10.4 11/10/2004

omitHeader capability
standalone header capability

1.10.3 31/08/2004

Cut/copy to properties now works with comment text

1.10.2 (no version change) 19/08/2004

Doc changes and enabled mailing list info. MD5 checksums on the web page

1.10.2 11/06/2004

<call> params can now take properties or static strings rather than just XPath expressions
Subtargets failure (in targets called by <call>) is propogated through <xmltask>
Filed fileset bug wrt. calling xmltask twice in the same build

Fixed jdk 1.3 incompatibility
1.10.1 18/05/2004

Fixed jdk 1.3 incompatibility

1.10  11/04/2004

<fileset> capability implemented

1.9.2 18/03/2004

clearBuffers now works for multiple files. ie. buffers
are cleared _prior_ to processing the file set

1.9.1 06/03/2004

Added build capability for jdk 1.5
Added Amazon references

1.9   31/12/2003

Tested against ant 1.6
call subtarget implemented
xmltask can now use a buffer as an input source

1.8.2 14/12/2003

Now handles multiple inputs with no output file/dir
Warns when copying non-text nodes to properties
clearBuffers direective

1.8.1 26/11/2003

Doc upgrade
Private external DTD outputter fix - both standard and simple outputter
Fix for node selections with results other than node iterators

1.8 09/11/2003

Modified/simplified boolean setters on XmlTask
Tested against Ant 1.6b