@@ -1,2 +1,2 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<root>[1 = Number 1][2 = n1][3 = Linux][1 = Number 2][2 = n2][3 = Linux]</root>
+<root>[1 = Number 1][2 = n1][3 = Linux][4 = ${4}][5 = missing attr][1 = Number 2][2 = n2][3 = Linux][4 = ${4}][5 = missing attr]</root>
